<resources>
    <string name="app_name">GrupoMess</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Grupo Mess</string>
    <string name="nav_header_subtitle">admin@mess.com.mx</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Home</string>
    <string name="menu_new_folio">Nuevo Folio</string>
    <string name="menu_location">Ubicar rack</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="logo_mess">Grupo Mess</string>
    <string name="cube_logo">Cube logo</string>
    <string name="nuevo_folio">Nuevo folio</string>
    <string name="escanear_folio">Escanear folio</string>
    <string name="folio">Folio</string>
    <string name="ingrese_folio">Ingrese el folio o escanéelo</string>
    <string name="capture_imagenes">Imagenes para el folio seleccionado</string>
    <string name="imagenes_capturadas">Imagenes capturadas</string>
    <string name="imagenes">Capturar imagenes</string>
    <string name="fotos_capturadas">Fotos capturadas: 0</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar_foto">Eliminar foto</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="password_mismatch">La nueva contraseña y la confirmación no coinciden</string>
    <string name="password_change_success">Contraseña cambiada exitosamente</string>
    <string name="password_change_failure">Error al cambiar la contraseña. Por favor, inténtelo de nuevo.</string>
    <string name="login_failure">Error de inicio de sesión. Por favor, verifique sus credenciales.</string>
    <string name="empty_fields">Por favor, complete todos los campos.</string>
    <string name="cambio_psw">Cambiar contraseña</string>
    <string name="logout">Cerrar sesión</string>
    <string name="psw">psw</string>
</resources>