<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_marginTop="60dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageLock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/psw"
        android:src="@drawable/cerrar_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/cambio_psw"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSurface" />

    <EditText
        android:id="@+id/et_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/contrasena_actual"
        android:inputType="textPassword"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorOnSurface"
        android:alpha="0.6"
        android:padding="12dp" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/nueva_contrasena"
        android:background="@drawable/edit_text_background"
        android:textColorHint="?attr/colorOnSurface"
        android:textColor="?attr/colorOnSurface"
        android:alpha="0.6"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/confirmar_contrasena"
        android:background="@drawable/edit_text_background"
        android:textColorHint="?attr/colorOnSurface"
        android:textColor="?attr/colorOnSurface"
        android:alpha="0.6"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_marginTop="24dp"/>

</LinearLayout>
